added class "rows" for css grid styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       <h1>Miyazaki Gifs!</h1>
     <span id="buttons"></span>
 
-    <aside id="images"></aside>  
+    <aside id="images">
+        <div class="rows"></div>
+      </div>
+    </aside>  
      
       
   
