--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Anime Gifs!</title>
+    <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <!-- <link rel="stylesheet" href="assets/css/reset.css" /> -->
   </head>
   <body>
     <header>
