--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 
       <h1>Miyazaki Gifs!</h1>
     <span id="buttons"></span>
-
+    <form id="anime-form">
+      <label for="anime-input">What's your favorite Miyazaki movie?</label>
+      <input type="text" id="anime-input">
+      <br>
+      <input id="add-anime" type="submit" value="Add">
+    </form>
     <aside id="images">
         <div class="rows"></div>
       </div>
